fixed icon label and input alignment

--- a/public/main.css
+++ b/public/main.css
@@ -428,7 +428,8 @@ input[type=text],input[type=password], input[type=email]{
 .sign-icon{
     height: 50px;
     margin: 0 auto;
-    padding: 0;
+    padding-top: 3px;
+    padding-bottom: 3px;
     display: inline-block;
 }
 
